// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="Profilesstyle__Container-bszd8d-0 cpSuwR"
>
  <h1
    class="Profilesstyle__Title-bszd8d-1 hMAaTJ"
  >
    Who's watching?
  </h1>
  <ul
    class="Profilesstyle__List-bszd8d-2 cdTGxS"
  >
    <li
      class="Profilesstyle__Item-bszd8d-5 ftSPFA"
    >
      <img
        class="Profilesstyle__Picture-bszd8d-4 evjKIZ"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="Profilesstyle__Name-bszd8d-3 bRXCei"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="Profilesstyle__Container-bszd8d-0 cpSuwR"
>
  <h1
    class="Profilesstyle__Title-bszd8d-1 hMAaTJ"
  >
    Who's watching?
  </h1>
  <ul
    class="Profilesstyle__List-bszd8d-2 cdTGxS"
  >
    <li
      class="Profilesstyle__Item-bszd8d-5 ftSPFA"
    >
      <img
        class="Profilesstyle__Picture-bszd8d-4 evjKIZ"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="Profilesstyle__Name-bszd8d-3 bRXCei"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
